
2018-01-29
Add "Description" for hint text as that is what most other plugins use

2018-05-20
Update for the May 1st major provider bouquet reshuffle
Rework code to simplify future bouquet changes, new bouquet file name extensions
New clean default set of custom files for use with the new file nomenclature

2018-05-24
Update custom sort 3 manager file
seperate Entertainment and Documentaries bouquets as default for this sort mode

2018-06-09
minor version increase 2.1
add default Bouquets "Regional" and "BBC Red Button"

2018-06-13
update supplement.txt - add BBC Red Button services
DMX_SET_SOURCE patch for linux kernel v4.17 dmx.h
minor version increase 2.2

2018-12-17
update boundary range between Bouquets "Regional" and "BBC Red Button"

2020-06-12
format overflow
void symlink return value

2020-06-17
2to3 python futurize
pep8 code style

2020-06-29
update default zapback service ref.

2020-07-22
Pick HD override

2020-07-23
update valid TSID namespace

2020-10-30
update default zapback service ref.

2021-05-09
remove redundant itv renames

2021-08-16
Remove deprecated register in C++17 for GCC 11

2023-02-07
use dxHoldName flag with name changed services found in supplement.txt
use dxDontshow flag with services in Adult/Gaming and Dating bouquets
add IEPG data 1 service to all service lists and Other bouquet as default

2023-02-23
Updated swaps since all BBC regions should now be in HD

2023-05-10
BBC Red button bouquet boundary changes

2023-07-20
BT Sports rebrand

2023-12-11
Supplement changes. Two new ITV HD channels

2024-01-27
Remove some closed ITV SD renames

2024-04-08
Remove some BBC SD swaps

2024-04-15
add optional AutoBouquets IptvEPG converter extension to menus.
new script tool attempts to auto convert live UK Iptv bouquets
generated by BMX or JMX to use opentv stream EPG service refs.
user to update CHANNEL_ID_ALIAS in autobouquets_iptv_epg.sh as needed
with required info taken from autobouquets.csv database reference file