@@ -4,7 +4,7 @@
 # auto assigns jmx,bmx iptv bouquets with live UK stream epg
 # service references generated by AutoBouquets E2 for 28.2E.
 
-VERSIONDATE="15 Apr 2024"
+VERSIONDATE="16 Apr 2024"
 
 # assign a channel id for alias names that change often
 # or are not automatically found by the detection logic
