@@ -414,3 +414,6 @@ new script tool attempts to auto convert live UK Iptv bouquets
 generated by BMX or JMX to use opentv stream EPG service refs.
 user to update CHANNEL_ID_ALIAS in autobouquets_iptv_epg.sh as needed
 with required info taken from autobouquets.csv database reference file
+
+2024-04-16
+update default service validation check for iptv
